--- a/instat/My Project/Resources.resx
+++ b/instat/My Project/Resources.resx
@@ -697,4 +697,52 @@
   <data name="Y_Axis_Variable" xml:space="preserve">
     <value>Y Axis Variable</value>
   </data>
+  <data name="Cases" xml:space="preserve">
+    <value>% Cases</value>
+  </data>
+  <data name="Category_Factor" xml:space="preserve">
+    <value>Category Factor</value>
+  </data>
+  <data name="Chart_Type" xml:space="preserve">
+    <value>Chart Type</value>
+  </data>
+  <data name="Cluster_By" xml:space="preserve">
+    <value>Cluster By</value>
+  </data>
+  <data name="Filter" xml:space="preserve">
+    <value>Filter</value>
+  </data>
+  <data name="Maximum" xml:space="preserve">
+    <value>Maximum</value>
+  </data>
+  <data name="Mean" xml:space="preserve">
+    <value>Mean</value>
+  </data>
+  <data name="Median" xml:space="preserve">
+    <value>Median</value>
+  </data>
+  <data name="Minimum" xml:space="preserve">
+    <value>Minimum</value>
+  </data>
+  <data name="Number_of_Cases" xml:space="preserve">
+    <value>Number of Cases</value>
+  </data>
+  <data name="Std_Deviation" xml:space="preserve">
+    <value>Std Deviation</value>
+  </data>
+  <data name="Summary_Statistics" xml:space="preserve">
+    <value>Summary Statistics</value>
+  </data>
+  <data name="Summary_Variable" xml:space="preserve">
+    <value>Summary Variable</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Title</value>
+  </data>
+  <data name="Total" xml:space="preserve">
+    <value>Total</value>
+  </data>
+  <data name="Weights" xml:space="preserve">
+    <value>Weights</value>
+  </data>
 </root>
