updates to distribution user controls

--- a/instat/My Project/Resources.resx
+++ b/instat/My Project/Resources.resx
@@ -895,4 +895,7 @@
   <data name="Normal" xml:space="preserve">
     <value>Normal</value>
   </data>
+  <data name="Probability" xml:space="preserve">
+    <value>Probability</value>
+  </data>
 </root>
