--- a/instat/frmEditor.resx
+++ b/instat/frmEditor.resx
@@ -129,4 +129,7 @@
   <metadata name="rowContextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>230, 173</value>
   </metadata>
+  <metadata name="statusColumnMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>401, 58</value>
+  </metadata>
 </root>
