Creating the front end for dlgImportDataset

--- a/instat/My Project/Resources.resx
+++ b/instat/My Project/Resources.resx
@@ -898,4 +898,40 @@
   <data name="Probability" xml:space="preserve">
     <value>Probability</value>
   </data>
+  <data name="Comment" xml:space="preserve">
+    <value>Comment</value>
+  </data>
+  <data name="Data_Frame" xml:space="preserve">
+    <value>Data Frame</value>
+  </data>
+  <data name="Encoding" xml:space="preserve">
+    <value>Encoding</value>
+  </data>
+  <data name="Heading" xml:space="preserve">
+    <value>Heading</value>
+  </data>
+  <data name="Import" xml:space="preserve">
+    <value>Import</value>
+  </data>
+  <data name="Input_File" xml:space="preserve">
+    <value>Input File</value>
+  </data>
+  <data name="No" xml:space="preserve">
+    <value>No</value>
+  </data>
+  <data name="Quote" xml:space="preserve">
+    <value>Quote</value>
+  </data>
+  <data name="Row_names" xml:space="preserve">
+    <value>Row names</value>
+  </data>
+  <data name="Separator" xml:space="preserve">
+    <value>Separator</value>
+  </data>
+  <data name="Strings_as_factors" xml:space="preserve">
+    <value>Strings as factors</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Yes</value>
+  </data>
 </root>
