Added tags for the von mises distribution

--- a/instat/My Project/Resources.resx
+++ b/instat/My Project/Resources.resx
@@ -1126,4 +1126,10 @@
   <data name="View_data" xml:space="preserve">
     <value>View data</value>
   </data>
+  <data name="Kappa" xml:space="preserve">
+    <value>Kappa</value>
+  </data>
+  <data name="vonmises" xml:space="preserve">
+    <value>vonmises</value>
+  </data>
 </root>
