corrected von mises in the resource file

--- a/instat/My Project/Resources.resx
+++ b/instat/My Project/Resources.resx
@@ -1132,4 +1132,7 @@
   <data name="vonmises" xml:space="preserve">
     <value>vonmises</value>
   </data>
+  <data name="von_mises" xml:space="preserve">
+    <value>von mises</value>
+  </data>
 </root>
